# ballball-story

./: README.md  package-lock.json
ballball-be/: .gitignore  main.py  pyproject.toml
ballball-be-2/: .gitignore  .prettierrc  index.js  package.json  test.js
ballball-be/api/: __init__.py  test.py  test_1.py
documents/: Unit_1.md  Unit_2.md  Unit_3.md  Unit_4.md
playground/: python_oop.py
src/: .eslintrc.js  App.css  App.js
src/Components/Auth/: AuthForm.js  styles.css
src/Components/Button/: Button.module.scss
src/Components/Category/: Category.module.scss
src/Components/GlobalStyles/: GlobalStyles.scss
src/Components/ListItem/: IconNumber.js  listItem.module.scss
src/GlobalStyles/: GlobalStyles.scss
src/hooks/: useAuth.js
src/pages/: Login.js  Todo.js
src/routers/: index.js
todo-be/: .env.dev  .gitignore  README.md  index.js  package.json  test.js
todo-be/ballball-next/: package.json  tailwind.config.js
todo-be/controllers/: authController.js  todoController.js  userController.js
todo-be/helper/: cloudinary.js  multer.js
todo-be/middleware/: auth.js  roles.js
todo-be/models/: todoModel.js  userModel.js
todo-be/router/: authRouter.js  index.js  todoRouter.js  userRouter.js
todo-fe/: package-lock.json  package.json
todo-fe/hooks/: useAxios.js
todo-fe/public/: index.html
todo-fe/src/: .eslintrc.js  App.js  index.css  index.js
truyentk-be/: .gitignore  main.py  pyproject.toml
truyentk-be/app/: config.py
truyentk-be/app/core/database/: __init__.py  mysql.py  redis.py
truyentk-be/app/services/: redis_service.py
(+40 files in other folders)
