[tool.poetry]
name = "ballball-be"
version = "0.1.0"
description = ""
authors = ["Thanh Nguyen <nvthanh1804@gmail.com>"]
readme = "README.md"
packages = [{include = "ballball_be"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
